feat(order): return aggregated order summaries from process-pending endpoint